[package]
name = "rust-hl7"
version = "0.1.0"
edition = "2021"
authors = ["User"]
description = "A Rust library for processing HL7 messages"

[dependencies]
nom = "7.1.3"        # For parsing
thiserror = "1.0.40" # For error handling
chrono = "0.4.24"    # For date/time handling
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"