[package]
name = "rust-hl7"
version = "0.1.0"
edition = "2021"
authors = ["User"]
description = "A Rust library for processing HL7 messages"

[dependencies]
sentry = "0.36.0"
nom = "7.1.3"        # For parsing
thiserror = "1.0.40" # For error handling
chrono = "0.4.24"    # For date/time handling
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.34.0", features = ["full"] } # Async runtime
tokio-util = { version = "0.7.10", features = ["codec"] } # For codec support
bytes = "1.5.0"      # For working with bytes
futures = "0.3.30"   # For async utilities
clap = { version = "4.4.13", features = ["derive"] } # For CLI argument parsing
tracing = "0.1.40"   # For logging
tracing-subscriber = "0.3.18" # For logging